--- a/styles/_varibles.scss
+++ b/styles/_varibles.scss
@@ -3,3 +3,7 @@ $formInputColor: #b4a7a7;
 
 $normalTextColor: #606060;
 $whiteTextColor: #f5f5f5;
+
+$navColor: #241c1c;
+
+$blurColorFormInput: #f1caca;
