--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -114,16 +114,25 @@ body {
 
 .btn {
   border: none;
+  width: 398px;
+  height: 56px;
+  background-color: $primaryColor;
+  color: $whiteTextColor;
+  font-size: 18px;
+  font-weight: 700;
+  text-transform: uppercase;
 
   &__form-login {
     margin-top: 88px;
-    width: 398px;
-    height: 56px;
-    background-color: $primaryColor;
-    color: $whiteTextColor;
-    font-size: 18px;
-    font-weight: 700;
-    text-transform: uppercase;
+  }
+
+  &__pick-meal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+    width: 148px;
   }
 }
 
@@ -196,6 +205,11 @@ body {
   grid-row-gap: 56px;
 }
 
+.locked {
+  font-size: 48px;
+  font-weight: 700;
+}
+
 .search {
   grid-column: 1/10;
   height: 156px;
@@ -236,16 +250,30 @@ body {
   }
 }
 
+.system-locked {
+  margin-top: 52px;
+}
 
 .meal {
   grid-column: span 3;
   height: 209px;
 
+  &:hover {
+    .btn__pick-meal {
+      display: block;
+    }
+
+    .meal__image {
+      opacity: .4;
+    }
+  }
+
   &__image-wrapper {
     width: 100%;
     height: 180px;
-    background-color: $primaryColor;
-    background-color: #e4e4e4;
+    background-color: $loadingColor;
+    color: transparent;
+    position: relative;
   }
 
   &__image {
@@ -281,13 +309,14 @@ body {
     width: 242px;
     height: 109px;
     position: relative;
-    background-color: #e4e4e4;
+    background-color: $primaryColor;
   }
 
   &__image {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    color: transparent;
   }
 
   &__remove {
@@ -310,10 +339,11 @@ body {
 }
 
 .previous-picks__image {
+  color: transparent;
   width: 244px;
   height: 154px;
   border: 1px solid #e1e1e1;
   margin-bottom: 26px;
   object-fit: cover;
-  background-color: #e4e4e4;
+  background-color: $loadingColor;
 }
