--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -407,6 +407,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 1;
 
   .d-logo {
     margin-top: 24px;
@@ -468,10 +469,13 @@ body {
 }
 
 .d-layout {
-  margin: 80px 0 0 144px;
+  padding: 80px 0 0 144px;
+  height: calc(100vh - 80px);
+  overflow: hidden;
+  overflow-x: scroll;
 }
 
-.dashboard-index {
+.admin-index {
   display: flex;
   flex-wrap: wrap;
 }
@@ -516,4 +520,50 @@ body {
     transform: scale($scaleIcon);
     transform-origin: 0 0;
   }
+}
+
+.admin-meals {
+  width: 100%;
+  height: 100%;
+}
+
+.meals-list {
+  margin-top: 62px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: flex-start;
+  width: auto;
+  height: 100%;
+  padding-right: 48px;
+
+  .meal img {
+    width: 290px;
+    height: 182px;
+  }
+
+  .meal {
+    margin-bottom: 24px;
+    padding-right: 28px;
+  }
+
+  .meal:hover {
+    .btn__pick-meal {
+      display: none;
+    }
+
+    .meal__image {
+      opacity: 1;
+    }
+  }
+}
+
+.admin-title {
+  position: fixed;
+  top: 46px;
+  left: 144px;
+  height: 56px;
+  margin: 0;
+  font-size: 48px;
+  font-weight: 500;
 }
