--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -522,12 +522,13 @@ body {
   }
 }
 
-.admin-meals {
+.admin-meals,
+.admin-users {
   width: 100%;
   height: 100%;
 }
 
-.meals-list {
+.resources-list {
   margin-top: 62px;
   display: flex;
   flex-wrap: wrap;
@@ -536,7 +537,9 @@ body {
   width: auto;
   height: 100%;
   padding-right: 48px;
+}
 
+.meals-list {
   .meal img {
     width: 290px;
     height: 182px;
@@ -617,5 +620,41 @@ body {
     &.open-search:before {
       width: 272px;
     }
+  }
+}
+
+.user-view {
+  display: flex;
+  margin-bottom: 48px;
+  margin-right: 58px;
+
+  &__avatar-wrapper {
+    width: 106px;
+    height: 106px;
+    border: 2px solid #4e4e4e;
+  }
+
+  &__avatar {
+    width: 106px;
+    height: 106px;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: center center;
+    color: transparent;
+    background-color: $loadingColor;
+  }
+
+  &__info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 22px;
+    color: #333;
+
+    p { margin: 0; }
+  }
+
+  &__name {
+    font-weight: bold;
   }
 }
