--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -523,7 +523,8 @@ body {
 }
 
 .admin-meals,
-.admin-users {
+.admin-users,
+.admin-todaymeals {
   width: 100%;
   height: 100%;
 }
@@ -628,6 +629,16 @@ body {
   margin-bottom: 48px;
   margin-right: 58px;
 
+  &:hover {
+    .user-view__info {
+      display: none;
+    }
+
+    .user-view__action {
+      display: flex;
+    }
+  }
+
   &__avatar-wrapper {
     width: 106px;
     height: 106px;
@@ -654,7 +665,35 @@ body {
     p { margin: 0; }
   }
 
+  &__action {
+    display: none;
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: center;
+    margin-left: 22px;
+
+    .locked-meassage {
+      flex-basis: 100%;
+      margin-top: 4px;
+      font-weight: 700;
+    }
+  }
+
   &__name {
     font-weight: bold;
+  }
+
+  &__icon {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 22px;
+    cursor: pointer;
+
+    &--lock { background-color: #fec123; }
+    &--remove { background-color: #f92c00; }
   }
 }
