--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -37,7 +37,7 @@ body {
 }
 
 
-.form {
+.form-login {
   &-wrapper {
     margin-top: 180px;
     margin-left: 146px;
@@ -165,6 +165,25 @@ body {
     padding-left: 36px;
     padding-right: 36px;
     font-size: 14px;
+  }
+
+  &--remove {
+    background-color: transparent;
+    color: #f92c00;
+    text-transform: none;
+    font-weight: 500;
+    padding: 0;
+    margin: 0;
+    width: auto;
+
+    svg {
+      transform: scale(3);
+      transform-origin: 60% 60%;
+    }
+
+    span {
+      margin-left: 16px;
+    }
   }
 }
 
@@ -625,6 +644,11 @@ body {
       opacity: 1;
     }
   }
+
+  a {
+    text-decoration: none;
+    color: $normalTextColor;
+  }
 }
 
 .admin-head {
@@ -887,6 +911,18 @@ body {
   }
 }
 
+.form {
+  &__input-group {
+    padding-top: 12px;
+    display: block;
+  }
+
+  p {
+    margin: 0;
+    margin-bottom: 4px;
+  }
+}
+
 .profile {
   display: grid;
   grid-template-columns: repeat(12, 78px);
@@ -895,22 +931,14 @@ body {
   margin-top: 192px;
   max-width: 1244px;
 
-  label {
-    padding-top: 12px;
-    display: block;
-  }
-
-  p {
-    margin-bottom: 8px;
-  }
-
-  .p-avatar {
+  .f-avatar {
     grid-column: 1/5;
 
     &__image {
       width: 290px;
       height: 290px;
       border-radius: 50%;
+      background-color: $loadingColor;
     }
 
     .btn--update {
@@ -919,7 +947,7 @@ body {
     }
   }
 
-  .p-profile {
+  .f-profile {
     grid-column: 5/9;
 
     .btn--update {
@@ -927,11 +955,77 @@ body {
     }
   }
 
-  .p-password {
+  .f-password {
     grid-column: span 4;
 
     .btn--update {
       margin-top: 42px;
     }
+  }
+}
+
+.upload-btn-wrapper {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+}
+
+.upload-btn-wrapper input[type=file] {
+  font-size: 100px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+}
+
+.meal-form {
+  margin-top: 48px;
+
+  &__remove {
+    margin-bottom: 56px;
+    margin-left: 12px;
+  }
+
+  &__image-wrapper {
+    position: relative;
+    width: 292px;
+    height: 182px;
+
+    .upload-btn-wrapper {
+      position: absolute;
+      bottom: 12px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 188px;
+
+      .btn--update {
+        background-color: rgba(39, 32, 32, 0.5);
+        padding: 0;
+        width: 100%;
+        height: 40px;
+        border-radius: 8px;
+      }
+    }
+  }
+
+  &__image {
+    width: 100%;
+    height: 100%;
+    border: 1px solid #e1e1e1;
+    background-color: $loadingColor;
+    object-fit: cover;
+  }
+
+  &__body {
+    display: flex;
+  }
+
+  &__info {
+    margin-left: 60px;
+    margin-top: 0;
+  }
+
+  .form__btn-group {
+    margin-top: 58px;
   }
 }
