install dependencies, start intergrate with express server

--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -25,7 +25,7 @@ body {
 }
 
 .form-background {
-  background-image: url('/static/images/first-page-bg.png');
+  background-image: url('/images/first-page-bg.png');
   background-size: cover;
   background-position: bottom;
   height: 100vh;
