--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -416,7 +416,7 @@ body {
   }
 
   &__image-wrapper {
-    width: 100%;
+    width: 290px;
     height: 180px;
     background-color: $loadingColor;
     color: transparent;
@@ -656,7 +656,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  align-items: flex-start;
+  align-content: flex-start;
   width: auto;
   height: 100%;
   padding-right: 48px;
@@ -664,8 +664,8 @@ body {
 
 .meals-list {
   .meal img {
-    width: 290px;
-    height: 182px;
+    width: 100%;
+    height: 100%;
   }
 
   .meal {
@@ -776,17 +776,16 @@ body {
   &__avatar-wrapper {
     width: 106px;
     height: 106px;
-    border: 2px solid #4e4e4e;
+    border-radius: 50%;
+    background-color: $loadingColor;
   }
 
   &__avatar {
-    width: 106px;
-    height: 106px;
-    border-radius: 50%;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     object-position: center center;
     color: transparent;
-    background-color: $loadingColor;
   }
 
   &__info {
