--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -289,7 +289,7 @@ body {
   }
 }
 
-.lunch {
+.time-for-lunch {
   margin: auto;
   margin-top: 110px;
   max-width: 1244px;
@@ -646,7 +646,7 @@ body {
 
 .admin-meals,
 .admin-users,
-.admin-todaymeals {
+.admin-lunches {
   width: 100%;
   height: 100%;
   margin-top: 62px;
