--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -590,9 +590,9 @@ body {
 }
 
 .d-layout {
-  margin: 80px 0 0 64px;
+  margin: 142px 0 12px 64px;
   padding-left: 80px;
-  height: calc(100vh - 80px);
+  height: calc(100vh - 154px);
   overflow: hidden;
   overflow-x: scroll;
 }
@@ -649,7 +649,6 @@ body {
 .admin-lunches {
   width: 100%;
   height: 100%;
-  margin-top: 62px;
 }
 
 .resources-list {
@@ -1064,5 +1063,20 @@ body {
 
   .form__btn-group {
     margin-top: 58px;
+  }
+}
+
+.lunch-view {
+  padding: 24px 48px;
+  background-color: #ffe;
+  text-decoration: none;
+  color: $normalTextColor;
+  border: 1px solid #fee;
+  border-radius: 24px;
+  margin-right: 24px;
+  margin-bottom: 24px;
+
+  &--today {
+    font-weight: bold;
   }
 }
