--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -441,6 +441,7 @@ body {
   margin-left: 26px;
   padding-left: 16px;
   border-left: 4px solid $primaryColor;
+  min-height: 80vh;
 }
 
 .picked__title {
