--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -913,7 +913,7 @@ body {
   flex-direction: column;
   align-content: flex-start;
   height: 476px;
-  margin-top: 278px;
+  margin-top: 68px;
   z-index: -1;
 
   .today-pick {
@@ -923,6 +923,15 @@ body {
 
   .today-pick:nth-child(2n) {
     margin-bottom: 0;
+  }
+}
+
+.lunch-status {
+  margin-top: 120px;
+  font-size: 24px;
+
+  span {
+    font-weight: 700;
   }
 }
 
@@ -1088,4 +1097,11 @@ body {
   &--today {
     font-weight: bold;
   }
+}
+
+input[disabled] {
+  border: none;
+  background-color: $loadingColor;
+  padding: 8px;
+  padding-left: 24px;
 }
