add directive requireRoleAdmin, update lunches search

--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -706,6 +706,8 @@ body {
     text-transform: uppercase;
     display: flex;
     align-items: center;
+
+    a { text-decoration: none; color: $normalTextColor; }
   }
 
   .search-txt {
